--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="stylesheet" href="Scripts/Principal.js">
     <link rel="stylesheet" href="Estilos/Principal.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,15 +22,48 @@
 <body>
 
     <header>
-        <div class="container">
-            <div class="row">
-                <div class="div-header col-md-12">
-                    <h1>Bem-vindo ao Chile!</h1>
-                    <img class="banner d-block w-100" src="Imagens/banner.png" alt="">
-                </div>
+        <!-- Barra de navegação -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            
+            <a class="navbar-brand" href="#"><img src="Imagens/logo.png" alt="Logo" width="40px" height="40px"></a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Início <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sobre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contato</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="div-header">
+            <h1>Bem-vindo ao Chile!</h1>
+
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <!-- Slides -->
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="Imagens/banner.png" alt="Primeiro Slide" class="banner d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="Imagens/banner2.jpg" alt="Segundo Slide" class="banner d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="Imagens/banner3.jpg" alt="Segundo Slide" class="banner d-block w-100">
+                      </div>
+                </div>        
             </div>
         </div>
     </header>
-    
 </body>
 </html>
