--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Bem-vindo ao Chile</title>
+    <title>Home - Volta ao Mundo</title>
 </head>
 <body>
 
@@ -47,7 +47,8 @@
         </nav>
 
         <div class="div-header">
-            <h1>Bem-vindo ao Chile!</h1>
+            <h1><strong>Bem-vindo ao Chile!</strong></h1>
+            <h2>Dos Andes ao oceano, a beleza do Chile não tem limites</h2>
 
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <!-- Slides -->
@@ -65,5 +66,55 @@
             </div>
         </div>
     </header>
+
+    <div class="conteudo">
+        <div class="container">
+            <h1>Conheça o Chile</h1>
+            <h2>Dos Andes ao oceano, a beleza do Chile não tem limites.</h2>
+
+            <p>Do extremo norte com o deserto mais seco do mundo, ao sul austral com gelo eterno e quedas de água invertidas, o Chile é um convite difícil de recusar. Aprenda sobre turismo no Chile, e surpreenda-se com as experiências no extremo sul do mundo               
+            </p>
+
+            <img src="" alt="">
+        </div>
+    </div>
+
+    <div class="cards container">
+        <div class="card-deck">
+            <div class="card">
+              <img class="card-img-top" src="Imagens/card1.jpg" alt="Imagem de capa do card">
+              <div class="card-body">
+                <h5 class="card-title">Turismo</h5>
+                <p class="card-text">Este é um card mais longo com suporte a texto embaixo, que funciona como uma introdução a um conteúdo adicional. Este conteúdo é um pouco maior.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="Imagens/card2.jpg" alt="Imagem de capa do card">
+              <div class="card-body">
+                <h5 class="card-title">Culinária</h5>
+                <p class="card-text">Este é um card com suporte a texto embaixo, que funciona como uma introdução a um conteúdo adicional.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="Imagens/card3.jpg" alt="Imagem de capa do card">
+              <div class="card-body">
+                <h5 class="card-title">Cultura</h5>
+                <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma introdução a um conteúdo adicional. Este card tem o conteúdo ainda maior que o primeiro, para mostrar a altura igual, em ação.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="Imagens/card4.jpg" alt="Imagem de capa do card">
+              <div class="card-body">
+                <h5 class="card-title">Planos</h5>
+                <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma introdução a um conteúdo adicional. Este card tem o conteúdo ainda maior que o primeiro, para mostrar a altura igual, em ação.</p>
+              </div>
+            </div>
+          </div>
+    </div>
+
+
+    <footer class="rodape">
+        <p>2023 &#169 Pedro Fuin - Todos os Direitos Reservados</p>
+    </footer>
 </body>
 </html>
