Adicionado mais um link na nav bar, feito leink com site da LATAM

--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
             <a class="nav-link" href="turismo.html">Turismo / </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="requisitos.html">Requisitos / </a>
+            <a class="nav-link" href="requisitos.html">Culinária / </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="requisitos.html">Cultura / </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sobre.html">Sobre</a>
@@ -133,7 +136,7 @@
       </div>
 
       <div class="card">
-        <a href="#"><img class="card-img-top" src="Imagens/card4.jpg" alt="Imagem de capa do card"></a>
+        <a href="https://www.latamairlines.com/br/pt/destinos/chile?gclsrc=aw.ds&gad_source=1&gclid=CjwKCAjwwr6wBhBcEiwAfMEQszvRiv813atFxmsdqsp03Ptzy2qlKZ5Vs_X1830iXyvGkJKa8pa6CRoCX4sQAvD_BwE"><img class="card-img-top" src="Imagens/card4.jpg" alt="Imagem de capa do card"></a>
         <div class="card-body">
           <h5 class="card-title">Viagens</h5>
           <p class="card-text">Voe para o Chile e descubra um país cheio de contrastes, desde a beleza dos Andes até a
@@ -148,7 +151,7 @@
 
   <div class="conteudo2">
     <div class="container d-flex justify-content-between">
-      <img class="img-fluid" src="Imagens/conteudo2.png" alt="Imagem mapa">
+      <img id="img2" src="Imagens/conteudo2.png" alt="Imagem mapa">
       <div class="txt-conteudo">
         <p>
           Venha conhecer o Chile e descubra um destino repleto de diversidade e encantos! Com paisagens de tirar o fôlego, como o Deserto do Atacama e a Patagônia, oferece aventura e contemplação. Em cidades como Valparaíso e Santiago, mergulhe na rica cultura local, apreciando arte de rua e arquitetura colonial. Não deixe de se deliciar com a culinária chilena, com pratos como ceviche e asado, acompanhados dos renomados vinhos do país. Uma experiência única aguarda por você no Chile. ¡Bienvenidos! <br>
