--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             <a class="nav-link" href="turismo.html">Turismo / </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="requisitos.html">Culinária / </a>
+            <a class="nav-link" href="culinaria.html">Culinária / </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="requisitos.html">Cultura / </a>
+            <a class="nav-link" href="cultura.html">Cultura / </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sobre.html">Sobre</a>
@@ -139,7 +139,7 @@
         <a href="https://www.latamairlines.com/br/pt/destinos/chile?gclsrc=aw.ds&gad_source=1&gclid=CjwKCAjwwr6wBhBcEiwAfMEQszvRiv813atFxmsdqsp03Ptzy2qlKZ5Vs_X1830iXyvGkJKa8pa6CRoCX4sQAvD_BwE"><img class="card-img-top" src="Imagens/card4.jpg" alt="Imagem de capa do card"></a>
         <div class="card-body">
           <h5 class="card-title">Viagens</h5>
-          <p class="card-text">Voe para o Chile e descubra um país cheio de contrastes, desde a beleza dos Andes até a
+          <p class="card-text">Voe para o Chile e descubra um pxaís cheio de contrastes, desde a beleza dos Andes até a
             serenidade do Oceano Pacífico. Com voos diretos disponíveis de várias cidades ao redor do mundo, o Chile
             espera por você para uma experiência inesquecível.</p>
         </div>
