--- a/Sobre.html
+++ b/Sobre.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-  <title>Home - Volta ao Mundo</title>
+  <title>Sobre - Volta ao Mundo</title>
 </head>
 
 <body>
