Adicionado conteudo a página Turismo.html

--- a/turismo.html
+++ b/turismo.html
@@ -75,13 +75,13 @@
                 <!-- Slides -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="Imagens/Sobre/sobre1.jpeg" alt="Primeiro Slide" class="banner d-block w-100">
+                        <img src="Imagens/Turismo/turismo2.jpg" alt="Primeiro Slide" class="banner d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="Imagens/Sobre/sobre2.jpg" alt="Segundo Slide" class="banner d-block w-100">
+                        <img src="Imagens/Turismo/turismo7.jpg" alt="Segundo Slide" class="banner d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="Imagens/Sobre/sobre3.jpg" alt="Terceiro Slide" class="banner d-block w-100">
+                        <img src="Imagens/Turismo/turismo1.jpg" alt="Terceiro Slide" class="banner d-block w-100">
                     </div>
                 </div>
             </div>
@@ -93,16 +93,27 @@
             <div class="txt-conteudo">
                 <h1 align="center">Turismo</h1>
 
-                <p>Bem-vindos, viajantes intrépidos, ao país mais "sabe-tudo" da América do Sul - o
-                    <strong>Chile!</strong>
-                    Preparem-se para uma viagem repleta de emoções, surpresas e, é claro, muitas piadas sobre llamas.
+                <p>
+                    E aí, aventureiros! Prontos para uma jornada emocionante pelo país mais longo e divertido da América
+                    do Sul? Bem-vindos ao Chile, onde as paisagens são de tirar o fôlego e as aventuras são tão épicas
+                    que até a Mãe Natureza fica com inveja!
                     <br><br>
 
-                    Primeiro, vamos falar sobre localização. O Chile é aquele país que parece uma pimenta vermelha no
-                    mapa,
-                    pendurado entre a Cordilheira dos Andes e o Oceano Pacífico. Sim, é tão apimentado quanto parece!
+                    Imagine-se caminhando pelas ruas coloridas de Valparaíso, onde até as paredes têm histórias para
+                    contar. Ou quem sabe se perdendo nas ruínas de um antigo povoado inca no deserto do Atacama, onde
+                    até as estrelas parecem brilhar mais forte. Ah, e não podemos esquecer da Patagônia, onde o vento
+                    sopra tão forte que parece que até as montanhas estão dançando!
                     <br><br>
 
+                    Mas não é só de paisagens que vive o Chile, não! Preparem seus paladares para uma experiência
+                    culinária que vai mexer com todos os seus sentidos. Desde o frescor do ceviche até o calor
+                    reconfortante de um bom asado, cada prato é uma viagem sensorial que vai te deixar pedindo mais!
+                    <br><br>
+
+                    Então, se você é um aventureiro de carteirinha, um amante da natureza ou apenas alguém em busca de
+                    um pouco mais de emoção na vida, o Chile é o lugar perfeito para você. Então, o que estão esperando?
+                    Vamos embarcar nessa aventura juntos e descobrir por que o Chile é tão incrível!
+                    <br><br>
                 </p>
             </div>
         </div>
@@ -112,14 +123,22 @@
 
     <div class="conteudo">
         <div class="container d-flex justify-content-between">
-            <img class="img-turismo" src="Imagens/img1.jpg" alt="Imagem paisagem">
+            <img class="img-turismo" src="Imagens/Turismo/turismo1.jpg" alt="Imagem paisagem">
             <div class="container txt-conteudo">
+                <h2>Deserto do Atacama</h2>
 
-                <p>Bem-vindos, viajantes intrépidos, ao país mais "sabe-tudo" da América do Sul - o
-                    <strong>Chile!</strong>
-                    Preparem-se para uma viagem repleta de emoções, surpresas e, é claro, muitas piadas sobre llamas.
-                    <br><br>
-                </p>
+                    <p>Preparem-se para uma aventura épica no deserto mais árido do mundo - o Deserto do Atacama, no
+                        Chile!
+                        Aqui, as paisagens parecem saídas de outro planeta, com lagunas coloridas, vulcões adormecidos e
+                        dunas que desafiam a gravidade.
+                        <br><br>
+
+                        E se você é fã de astronomia, prepare-se para uma noite estrelada que vai te deixar de queixo
+                        caído.
+                        Com céus tão limpos que você pode contar as estrelas, o Atacama é um paraíso para os amantes do
+                        universo.
+                        <br><br>
+                    </p>
             </div>
         </div>
 
@@ -130,10 +149,10 @@
                 <!-- Slides -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="Imagens/Sobre/sobre1.jpeg" alt="Primeiro Slide" class="banner d-block w-100">
+                        <img src="Imagens/Turismo/turismo4.png" alt="Primeiro Slide" class="banner d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="Imagens/Sobre/sobre2.jpg" alt="Segundo Slide" class="banner d-block w-100">
+                        <img src="Imagens/Turismo/turismo1.jpg" alt="Segundo Slide" class="banner d-block w-100">
                     </div>
                     <div class="carousel-item">
                         <img src="Imagens/Sobre/sobre3.jpg" alt="Terceiro Slide" class="banner d-block w-100">
@@ -147,15 +166,22 @@
         <div class="conteudo">
             <div class="container d-flex justify-content-between">
                 <div class="container txt-conteudo">
-                    <p>Bem-vindos, viajantes intrépidos, ao país mais "sabe-tudo" da América do Sul - o
-                        <strong>Chile!</strong>
-                        Preparem-se para uma viagem repleta de emoções, surpresas e, é claro, muitas piadas sobre
-                        llamas. <br><br>
+                    <h2 align="right">Torres del Paine</h2>
+                    <p align="right">Se vocês estão em busca de aventura, paisagens de tirar o fôlego e pinguins fofinhos, então
+                        preparem-se para conhecer o Parque Nacional Torres del Paine, no Chile!
+                        <br><br>
+
+                        Aqui, as montanhas parecem tocar o céu, os lagos são tão azuis que parecem pintados e as trilhas
+                        são tão desafiadoras que até os mais experientes aventureiros vão suar a camisa.
+                        <br><br>
+
+                        Mas não é só de paisagens que vive Torres del Paine, não! Preparem-se para encontrar uma fauna e
+                        flora tão diversificadas que parece que você está em um zoológico a céu aberto. Pinguins,
+                        guanacos, condores... Aqui, a natureza é a estrela do espetáculo!
+                        <br><br>
                     </p>
                 </div>
-                <div>
-                <img class="img-turismo" src="Imagens/img1.jpg" alt="Imagem paisagem">
-                </div>
+                <img class="img-turismo" src="Imagens/Turismo/turismo2.jpg" alt="Imagem paisagem">
             </div>
         </div>
 
@@ -164,25 +190,25 @@
         <div class="container">
             <div class="intro txt-conteudo">
                 <h1 class="text-center">Galeria de Fotos</h2>
-                <p class="text-center">Descubra lugares incríveis</p>
+                    <p class="text-center">Descubra lugares incríveis</p>
             </div>
             <div class="row photos">
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/banner.png" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/banner.png"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/banner.png" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/banner.png"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/banner.png" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/banner.png"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/banner.png" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/banner.png"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/banner.png" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/banner.png"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/banner.png" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/banner.png"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/banner.png" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/banner.png"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/banner.png" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/banner.png"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo1.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Imagens/Turismo/turismo1.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo2.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Imagens/Turismo/turismo2.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo3.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Imagens/Turismo/turismo3.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo4.png" data-lightbox="photos"><img
+                            class="img-fluid" src="Imagens/Turismo/turismo4.png"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo5.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Imagens/Turismo/turismo5.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo6.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Imagens/Turismo/turismo6.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo7.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Imagens/Turismo/turismo7.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo8.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Imagens/Turismo/turismo8.jpg"></a></div>
             </div>
         </div>
     </div>
