--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Início / <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Início / </span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="turismo.html">Turismo / </a>
@@ -105,7 +105,7 @@
     <div class="card-deck">
 
       <div class="card">
-        <a href="#"><img class="card-img-top" src="Imagens/card1.jpg" alt="Imagem de capa do card"></a>
+        <a href="turismo.html"><img class="card-img-top" src="Imagens/card1.jpg" alt="Imagem de capa do card"></a>
         <div class="card-body">
           <h5 class="card-title">Turismo</h5>
           <p class="card-text">O Chile encanta com suas paisagens diversificadas, que vão desde desertos até montanhas
@@ -115,7 +115,7 @@
       </div>
 
       <div class="card">
-        <a href="#"><img class="card-img-top" src="Imagens/card2.jpg" alt="Imagem de capa do card"></a>
+        <a href="culinaria.html"><img class="card-img-top" src="Imagens/card2.jpg" alt="Imagem de capa do card"></a>
         <div class="card-body">
           <h5 class="card-title">Culinária</h5>
           <p class="card-text">A culinária chilena é uma mistura vibrante de sabores, destacando-se pela influência
@@ -125,7 +125,7 @@
       </div>
 
       <div class="card">
-        <a href="#"><img class="card-img-top" src="Imagens/card3.jpg" alt="Imagem de capa do card"></a>
+        <a href="cultura.html"><img class="card-img-top" src="Imagens/card3.jpg" alt="Imagem de capa do card"></a>
         <div class="card-body">
           <h5 class="card-title">Cultura</h5>
           <p class="card-text">
@@ -136,7 +136,9 @@
       </div>
 
       <div class="card">
-        <a href="https://www.latamairlines.com/br/pt/destinos/chile?gclsrc=aw.ds&gad_source=1&gclid=CjwKCAjwwr6wBhBcEiwAfMEQszvRiv813atFxmsdqsp03Ptzy2qlKZ5Vs_X1830iXyvGkJKa8pa6CRoCX4sQAvD_BwE"><img class="card-img-top" src="Imagens/card4.jpg" alt="Imagem de capa do card"></a>
+        <a
+          href="https://www.latamairlines.com/br/pt/destinos/chile?gclsrc=aw.ds&gad_source=1&gclid=CjwKCAjwwr6wBhBcEiwAfMEQszvRiv813atFxmsdqsp03Ptzy2qlKZ5Vs_X1830iXyvGkJKa8pa6CRoCX4sQAvD_BwE"><img
+            class="card-img-top" src="Imagens/card4.jpg" alt="Imagem de capa do card"></a>
         <div class="card-body">
           <h5 class="card-title">Viagens</h5>
           <p class="card-text">Voe para o Chile e descubra um pxaís cheio de contrastes, desde a beleza dos Andes até a
@@ -154,12 +156,17 @@
       <img id="img2" src="Imagens/conteudo2.png" alt="Imagem mapa">
       <div class="txt-conteudo">
         <p>
-          Venha conhecer o Chile e descubra um destino repleto de diversidade e encantos! Com paisagens de tirar o fôlego, como o Deserto do Atacama e a Patagônia, oferece aventura e contemplação. Em cidades como Valparaíso e Santiago, mergulhe na rica cultura local, apreciando arte de rua e arquitetura colonial. Não deixe de se deliciar com a culinária chilena, com pratos como ceviche e asado, acompanhados dos renomados vinhos do país. Uma experiência única aguarda por você no Chile. ¡Bienvenidos! <br>
+          Venha conhecer o Chile e descubra um destino repleto de diversidade e encantos! Com paisagens de tirar o
+          fôlego, como o Deserto do Atacama e a Patagônia, oferece aventura e contemplação. Em cidades como Valparaíso e
+          Santiago, mergulhe na rica cultura local, apreciando arte de rua e arquitetura colonial. Não deixe de se
+          deliciar com a culinária chilena, com pratos como ceviche e asado, acompanhados dos renomados vinhos do país.
+          Uma experiência única aguarda por você no Chile. ¡Bienvenidos! <br>
         </p>
       </div>
     </div>
   </div>
 
+  <hr>
 
   <footer class="rodape">
     <p>2023 &#169 Pedro Fuin - Todos os Direitos Reservados</p>
